feat: 分层规划、并行执行、拓扑排序修复、OS自动检测
- 新增 Phase 模型与分层规划（/hplan）：先定宏观阶段，再逐阶段细化子任务
- 并行执行引擎：基于虚拟线程 + CompletableFuture，无冲突任务同时执行
- 修复拓扑排序反转 Bug：DFS 后序已是正确顺序，移除多余 reverse()
- ConversationManager 线程安全：add()/toList()/getMessages() 加 synchronized
- OS 自动检测：System Prompt 动态注入 os.name，命令格式自动适配 Windows/Linux
- reasoning_content 优化：不调工具的轮次不进对话历史，节省 Token
- Planner 重构：单层 createPlan() + 双层 createPlanHierarchical()